--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 	<head>
-		<title>Hi YiJing</title>
+		<title>Hi YiJing!</title>
 	</head>
 	<body>We are partners for System Admin exercise</body>
 </html>
